--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,3 +9,5 @@
  * Consider organizing styles into separate files for maintainability.
  */
  @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css');
+ @import "navbar";
+ @import "alert";
