--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,5 @@
  * Consider organizing styles into separate files for maintainability.
  */
  @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css');
- @import "navbar";
- @import "alert";
+ @import "components/navbar";
+ @import "components/alert";
