--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,15 +1,12 @@
 <div class="container">
   <%= simple_form_for(@article) do |f| %>
-
-    <!-- [...] -->
-  
     <div class="form-inputs">
       <%= f.input :title, label: "Título:" %>
     </div>
-  
-    <!-- insert these three line of code below -->
+
     <div class="form-inputs">
       <%= f.rich_text_area :rich_body %>
+      <%= f.input :photo, as: :file %>
     </div>
   
     <div class="form-actions">
