--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
 <h2 class="text-center font-weight-bold mb-2"><%= @article.title %></h2>
+<%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
 <%= @article.rich_body %>
 </div>
