added banner to home page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  @import "components/alert";
  @import "components/form_login";
  @import "components/card";
+ @import "components/banner";
 
  @import "actiontext";
  @import "trix/dist/trix";
