--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,11 @@
+<div class="banner mb-4" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/de2pldbhy/image/upload/v1735545138/development/05nlremsa7srbvxuasa9fvfbgpjm.jpg);">
+  <div class="container">
+    <h1>Gabriel Aleixo <strong>Desenvolvedor Web</strong> apaixonado</h1>
+    <p>Pela tradução da lógica de negócios em lógica computacional</p>
+    <a class="btn btn-primary" href="https://devaleixo.com" target="_blank">Portfólio</a>
+  </div>
+</div>
+
 <div class="container">
 <div class="cards">
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
