added comments model and its association

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner mb-4" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/de2pldbhy/image/upload/v1735545138/development/05nlremsa7srbvxuasa9fvfbgpjm.jpg);">
   <div class="container">
-    <h1>Gabriel Aleixo <strong>Desenvolvedor Web</strong> apaixonado</h1>
-    <p>Pela tradução da lógica de negócios em lógica computacional</p>
+    <h1>Gabriel Aleixo <strong>Desenvolvedor RoR</strong></h1>
+    <p>Tradução da lógica de negócios em lógica computacional</p>
     <a class="btn btn-primary" href="https://devaleixo.com" target="_blank">Portfólio</a>
   </div>
 </div>
