--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -13,4 +13,29 @@
       <%= f.button :submit %>
     </div>
   <% end %>
+
+
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Criar Tag 
+</button>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      
+      <%= simple_form_for(@tag) do |f| %>
+      <div class="modal-body">
+        <%= f.input :title, label: "Nome:"%>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <%= f.button :submit, :class => "btn btn-primary", label: "Criar" %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
 </div>
