added photos aleatory photos to cards on home page and article/show, showing comments at article/show

--- a/app/assets/stylesheets/components/card.css
+++ b/app/assets/stylesheets/components/card.css
@@ -17,6 +17,15 @@
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     border-radius: 5px;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    text-decoration: none;
+  }
+
+  .card-category .a{
+    text-decoration: none;
+  }
+  .card-category:hover {
+    text-decoration: none;
+    background-color: rgba(0,0,0,0.2);
   }
   
   @media (min-width: 100px) and (max-width: 575px) {
