--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer mt-5">
   <div class="footer-links">
     <a href="https://github.com/devaleixo"><i class="fab fa-github"></i></a>
     <a href="https://www.instagram.com/0aleixo/"><i class="fab fa-instagram"></i></a>
