--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,6 +21,9 @@
             <%= link_to "Trocar senha", edit_user_registration_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
+            <%= link_to "Criar Artigo", new_article_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link" %>
           </li>
         <% else %>
